k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aspm-inventory
  labels:
    name: aspm-inventory
    app: aspm-service-inventory
