k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspm-service-inventory
  namespace: aspm-inventory
  labels:
    app: aspm-service-inventory
    version: v1.0.0
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aspm-service-inventory
  template:
    metadata:
      labels:
        app: aspm-service-inventory
        version: v1.0.0
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      containers:
      - name: aspm-inventory
        image: ghcr.io/mikedzikowski/aspm-api-inventory:v1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          runAsNonRoot: true
          runAsUser: 1000
          capabilities:
            drop:
            - ALL
      restartPolicy: Always
