k8s/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspm-service-inventory-lb
  namespace: aspm-inventory
  labels:
    app: aspm-service-inventory
spec:
  type: LoadBalancer
  selector:
    app: aspm-service-inventory
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  sessionAffinity: None
